--- a/rstyle.css
+++ b/rstyle.css
@@ -1,11 +1,11 @@
 * {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 34px;
+    /* font-size: 18px;
+    line-height: 34px; */
     color: #777;
     background: url("images/concrete_seamless.png");
   }
@@ -15,12 +15,12 @@ body {
   
   #masthead {
     background: #fff;
-    z-index: 99;
+    /* z-index: -1; */
     color: #fff;
-    position: fixed;    
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;    
+    /* position: fixed;     */
+    /* width: 100%; */
+    /* margin: 0 0 30px; */
+    /* overflow: auto;     */
     border-bottom: 2px solid #ccc;
   }
   
@@ -39,7 +39,7 @@ body {
   }
   
   nav {
-    float: right;
+    /* float: right; */
     margin-top: 25px;
   }
   
@@ -103,7 +103,7 @@ body {
     background: #fff;
     padding: 30px;
     width: 100%;    
-    max-width: 270px;
+    /* max-width: 270px; */
     margin-bottom: 20px; 
     border: 1px solid #ddd;
     float: right;
@@ -139,14 +139,14 @@ body {
     padding: 30px;
     margin: 0 0 40px;
     width: 100%;
-    max-width: 650px;
-    float: left;
+    /* max-width: 650px; */
+    /* float: left; */
     border: 1px solid #ddd;
   }
 
   .container {
     width: 100%;
-    max-width: 960px;
+    /* max-width: 960px; */
     margin: 0 auto;
     clear: both;
   }
